--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
+
 {
   "name": "proyectorenzo",
   "version": "1.0.0",
   "description": "web store",
-  "main": "index.js",
+  "main": "api/index.js",  
   "scripts": {
-    "start": "node index.js",
+    "start": "node ./api/index.js",    
     "postinstall": "tsc",
-    
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "reocupaal@ucvvirtual.edu.pe",
@@ -19,3 +19,4 @@
     "googleapis": "^105.0.0"
   }
 }
+
